# GA-GroupOptimizer

./: .gitignore  AlternativeCrossover.h  CMakeLists.txt  GaussianGroupingEvaluatorFactory.cpp  GaussianGroupingEvaluatorFactory.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  GroupingChallenge.cpp  GroupingChallenge.vcxproj  GroupingChallenge.vcxproj.filters  GroupingEvaluator.cpp  GroupingEvaluator.h  ICrossoverStrategy.h  ISelectionStrategy.h  Individual.cpp  Individual.h  Point.cpp  Point.h  README.md  RandomNumberGenerator.cpp  RandomNumberGenerator.h  StandardCrossover.h  TournamentSelection.h
